--- a/app/src/main/res/layout/activity_send_data.xml
+++ b/app/src/main/res/layout/activity_send_data.xml
@@ -8,20 +8,22 @@
 
     <TextView
         android:id="@+id/data"
-        android:layout_width="match_parent"
+        android:layout_width="1312dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="348dp"
         android:text="SENDING DATA TO NURSE, PLEASE WAIT ......"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="70sp"
+        android:textSize="50sp"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
-        android:src="@drawable/online"
-        android:layout_centerInParent="true"/>
+        android:layout_width="438dp"
+        android:layout_height="441dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/online" />
 
     <ProgressBar
         android:id="@+id/bar"
