--- a/app/src/main/res/layout/activity_vitals.xml
+++ b/app/src/main/res/layout/activity_vitals.xml
@@ -9,17 +9,19 @@
 
     <TextView
         android:id="@+id/Vitals"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="938dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
         android:text="@string/vitals"
         android:textAlignment="center"
         android:textColor="@color/red"
-        android:textSize="70sp"
+        android:textSize="50sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="50dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
 
     </TextView>
 
@@ -27,16 +29,13 @@
         android:id="@+id/User"
         android:layout_width="429dp"
         android:layout_height="82dp"
-        android:layout_marginStart="229dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/user_name"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.992"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Vitals"
         tools:ignore="MissingConstraints">
 
@@ -46,65 +45,38 @@
         android:id="@+id/Butt"
         android:layout_width="270dp"
         android:layout_height="123dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="416dp"
-        android:layout_marginEnd="156dp"
-        android:layout_marginBottom="63dp"
+        android:layout_marginTop="452dp"
         android:backgroundTint="@color/red"
         android:fontFamily="sans-serif"
         android:text="@string/next"
         android:textColor="@color/white"
         android:textSize="50sp"
         app:flow_horizontalAlign="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/User"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="@+id/scrollView2"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="846dp">
 
     </Button>
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="1545dp"
-        android:layout_height="75dp"
+        android:layout_width="1120dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="40dp"
         android:text="@string/instruct"
-        android:textColor="@color/black"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/User" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="664dp"
-        android:layout_height="75dp"
-        android:layout_gravity="start"
-
-        android:layout_weight="1"
-        android:text="@string/pulse"
         android:textColor="@color/black"
         android:textSize="50sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.021"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/User" />
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="425dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/Butt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView17">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -114,7 +86,7 @@
             <TextView
                 android:id="@+id/Data"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:focusable="false"
                 android:textColor="@color/black"
                 android:textSize="45sp"
@@ -123,5 +95,20 @@
                 />
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="664dp"
+        android:layout_height="75dp"
+        android:layout_gravity="start"
+
+        android:layout_marginTop="24dp"
+        android:layout_weight="1"
+        android:text="@string/pulse"
+        android:textColor="@color/black"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
