--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -9,18 +9,16 @@
 
     <TextView
         android:id="@+id/temp"
-        android:layout_width="1156dp"
-        android:layout_height="92dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="563dp"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="@string/temperature_section"
         android:textAlignment="center"
         android:textColor="@color/red"
-        android:textSize="50sp"
+        android:textSize="70sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.244"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
@@ -28,17 +26,17 @@
 
     <TextView
         android:id="@+id/User"
-        android:layout_width="380dp"
-        android:layout_height="62dp"
+        android:layout_width="320dp"
+        android:layout_height="80dp"
         android:layout_marginStart="229dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/user_name"
-        android:textSize="30sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.922"
+        app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/temp">
 
@@ -48,28 +46,27 @@
         android:id="@+id/Butt"
         android:layout_width="326dp"
         android:layout_height="91dp"
-        android:layout_marginTop="324dp"
+        android:layout_marginTop="76dp"
         android:backgroundTint="@color/red"
         android:fontFamily="sans-serif"
         android:text="@string/next"
         android:textColor="@color/white"
         android:textSize="50sp"
         app:flow_horizontalAlign="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/temp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         tools:ignore="MissingConstraints">
 
     </Button>
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="260dp"
-        android:layout_height="256dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/User"
+        android:layout_width="389dp"
+        android:layout_height="363dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/tempcheck"
         tools:ignore="MissingConstraints" />
 
