--- a/app/src/main/res/layout/activity_good_bye.xml
+++ b/app/src/main/res/layout/activity_good_bye.xml
@@ -7,28 +7,22 @@
     android:background="@drawable/med_background"
     tools:context=".GoodBye">
 
-    <TextView
-        android:id="@+id/Goodbye"
-        android:layout_width="1868dp"
-        android:layout_height="114dp"
-        android:layout_marginTop="72dp"
-        android:fontFamily="sans-serif"
-        android:text="@string/further_instructions"
-        android:textAlignment="center"
-        android:textColor="@color/red"
-        android:textSize="70sp"
-        android:textStyle="bold"
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/Butt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </TextView>
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/person" />
 
     <Button
         android:id="@+id/Butt"
         android:layout_width="222dp"
         android:layout_height="97dp"
-        android:layout_marginBottom="76dp"
         android:backgroundTint="@color/red"
         android:text="@string/exit"
         android:textColor="@color/white"
@@ -36,11 +30,9 @@
         app:flow_horizontalAlign="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Goodbye"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintStart_toStartOf="parent">
 
     </Button>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
