--- a/app/src/main/res/layout/activity_vitals.xml
+++ b/app/src/main/res/layout/activity_vitals.xml
@@ -9,20 +9,21 @@
 
     <TextView
         android:id="@+id/Vitals"
-        android:layout_width="546dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="86dp"
         android:fontFamily="sans-serif"
         android:text="@string/vitals"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="70sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/User"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
     </TextView>
+
 
     <TextView
         android:id="@+id/User"
@@ -34,11 +35,10 @@
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Vitals"
         tools:ignore="MissingConstraints">
 
     </TextView>
-
 
     <TextView
         android:id="@+id/textView17"
@@ -51,6 +51,7 @@
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/User" />
 
@@ -58,14 +59,14 @@
         android:id="@+id/Data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="20dp"
         android:focusable="false"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
